--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
   }
 
   window.onload = () => {
-    fetch(API_URL)
+    fetch(https://script.google.com/macros/s/AKfycbwfJZx3pCUVE8fVuBqUqg1i0xlVRdATGD9lFA7P8JwvePUvX8I3IuhZdJGQcpcLgaKo/exec)
       .then(response => response.json())
       .then(data => {
         produits = data.produits;
