--- a/index.html
+++ b/index.html
@@ -1,71 +1,36 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <title>Interface Caisse</title>
+  <meta charset="UTF-8">
+  <title>Interface Caisse - Rex Diner</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 20px; background-color: #f5f5f5; }
-    .container { display: flex; border: 2px solid #1e3a5f; border-radius: 12px; overflow: hidden; background: white; max-width: 1600px; margin: auto; }
-    .produits, .ticket { padding: 20px; flex: 1; display: flex; flex-direction: column; }
-    .produits { border-right: 1px solid #ccc; }
-    .produits h2, .ticket h2 { margin-top: 0; }
-    .produit-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(160px, 1fr)); gap: 12px; }
-    .produit-btn { background-color: #e0f2f1; border-radius: 8px; padding: 10px; text-align: center; cursor: pointer; }
-    .produit-btn:hover { background-color: #b2dfdb; }
-    .img-produit { width: 110px; height: 110px; border-radius: 6px; object-fit: cover; margin-bottom: 8px; }
-    .quantite-btns { display: flex; justify-content: center; gap: 6px; flex-wrap: wrap; }
-    .quantite-btn { font-size: 14px; padding: 4px 8px; border: none; border-radius: 4px; background-color: #c8e6c9; cursor: pointer; }
-    .quantite-btn:hover { background-color: #a5d6a7; }
-    .ticket-content { background: #f0f0f0; border-radius: 10px; padding: 10px; min-height: 150px; }
-    .ticket-line { display: flex; justify-content: space-between; margin: 5px 0; }
-    .total-final { font-size: 24px; font-weight: bold; margin-top: 10px; color: #2e7d32; }
-    .actions { margin-top: 20px; }
-    .btn { padding: 12px 18px; border: none; border-radius: 6px; font-size: 16px; margin-right: 10px; cursor: pointer; }
-    .btn-clear { background-color: #e57373; color: white; }
-    .logo-container-right { text-align: right; margin-top: 20px; }
-    .logo-container-right img { max-width: 150px; height: auto; }
-    .contrat-grid {
+    .container { display: flex; gap: 20px; max-width: 1600px; margin: auto; background: white; border-radius: 12px; padding: 20px; }
+    .produits, .ticket { flex: 1; }
+    .produit-grid, .contrat-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
       gap: 12px;
-      margin-top: 10px;
-      align-items: center;
-      justify-items: center;
-      max-width: 100%;
     }
-    .contrat-btn {
-      padding: 6px;
-      font-size: clamp(10px, 1.2vw, 14px);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+    .produit-btn, .contrat-btn {
       background-color: #e0f2f1;
+      padding: 10px;
       border-radius: 8px;
-      width: 100%;
-      max-width: 140px;
-      box-sizing: border-box;
       text-align: center;
+      cursor: pointer;
     }
-    .contrat-btn .img-produit {
-      width: auto;
-      height: 100%;
-      max-height: 100%;
-      max-width: 100%;
-      object-fit: contain;
-    }
-    .img-wrapper {
+    .produit-btn:hover, .contrat-btn:hover { background-color: #b2dfdb; }
+    .img-produit {
       width: 100px;
       height: 100px;
-      background-color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-bottom: 4px;
+      object-fit: cover;
       border-radius: 6px;
-      text-align: center;
-      font-weight: bold;
-      font-size: 14px;
+      margin-bottom: 8px;
     }
+    .quantite-btns { display: flex; justify-content: center; gap: 6px; flex-wrap: wrap; }
+    .quantite-btn { font-size: 12px; padding: 4px 8px; border: none; background-color: #c8e6c9; border-radius: 4px; cursor: pointer; }
+    .quantite-btn:hover { background-color: #a5d6a7; }
+    .ticket-content { background: #f0f0f0; padding: 10px; border-radius: 10px; min-height: 150px; }
   </style>
 </head>
 <body>
@@ -73,143 +38,57 @@
 <div class="container">
   <div class="produits">
     <h2>Produits</h2>
-    <div class="produit-grid" id="produit-grid"></div>
+    <div id="produit-grid" class="produit-grid"></div>
   </div>
 
   <div class="ticket">
-    <h2>Ticket en cours</h2>
-    <div class="ticket-content" id="ticket-content"></div>
-    <div class="ticket-line"><strong>Total brut :</strong> <span id="total-brut">0,00 $</span></div>
-    <div class="ticket-line"><strong>Remise :</strong> <span id="remise-appliquee">0 % (-0,00 $)</span></div>
-    <div class="ticket-line total-final"><span>Total final :</span><span id="total">0,00 $</span></div>
-
-    <h3>Réduction</h3>
-    <div class="quantite-btns" style="margin-bottom: 10px;">
-      <button class="quantite-btn" onclick="appliquerRemise(5)">-5%</button>
-      <button class="quantite-btn" onclick="appliquerRemise(10)">-10%</button>
-      <button class="quantite-btn" onclick="appliquerRemise(15)">-15%</button>
-      <button class="quantite-btn" onclick="appliquerRemise(20)">-20%</button>
-      <button class="quantite-btn" style="background-color: #ffcdd2;" onclick="annulerRemise()">Annuler remise</button>
-    </div>
-
-    <h3>Contrats</h3>
-    <div class="contrat-grid" id="contrat-grid"></div>
-
-    <div class="actions">
-      <button class="btn btn-clear" onclick="viderTicket()">🗑️ Vider Ticket</button>
-    </div>
-
-    <div class="logo-container-right">
-      <img src="https://i.ibb.co/mjSwdxz/rexdiner-removebg-preview.png" alt="Rex Diner Logo">
-    </div>
+    <h2>Contrats</h2>
+    <div id="contrat-grid" class="contrat-grid"></div>
   </div>
 </div>
 
 <script>
-  const API_URL = "https://script.google.com/macros/s/AKfycbwfJZx3pCUVE8fVuBqUqg1i0xlVRdATGD9lFA7P8JwvePUvX8I3IuhZdJGQcpcLgaKo/exec";
-  let produits = [];
-  let contrats = [];
-  const ticket = [];
-  let remise = 0;
+  // Appel à votre Google Apps Script API
+  fetch("https://script.google.com/macros/s/AKfycbwfJZx3pCUVE8fVuBqUqg1i0xlVRdATGD9lFA7P8JwvePUvX8I3IuhZdJGQcpcLgaKo/exec")
+    .then(res => res.json())
+    .then(data => {
+      const produits = data.produits || [];
+      const contrats = data.contrats || [];
 
-  function ajouterProduit(nom, prix, quantiteAjoutee = 1) {
-    const produit = ticket.find(p => p.nom === nom);
-    if (produit) {
-      produit.quantite += quantiteAjoutee;
-    } else {
-      ticket.push({ nom, prix, quantite: quantiteAjoutee });
-    }
-    afficherTicket();
-  }
+      const produitGrid = document.getElementById("produit-grid");
+      produits.forEach(({ nom, prix, image }) => {
+        const div = document.createElement("div");
+        div.className = "produit-btn";
+        div.innerHTML = `
+          ${image ? `<img src="${image}" class="img-produit" alt="${nom}">` : `<div>${nom}</div>`}
+          <div class="quantite-btns">
+            <button class="quantite-btn">+1</button>
+            <button class="quantite-btn">+5</button>
+            <button class="quantite-btn">+10</button>
+          </div>
+        `;
+        produitGrid.appendChild(div);
+      });
 
-  function afficherTicket() {
-    const container = document.getElementById('ticket-content');
-    const totalEl = document.getElementById('total');
-    const totalBrutEl = document.getElementById('total-brut');
-    const remiseEl = document.getElementById('remise-appliquee');
-    container.innerHTML = '';
-    let totalBrut = 0;
-
-    ticket.forEach(produit => {
-      const ligne = document.createElement('div');
-      ligne.className = 'ticket-line';
-      ligne.innerHTML = `<span>${produit.nom} x${produit.quantite}</span><span>${(produit.prix * produit.quantite).toFixed(2)} $</span>`;
-      container.appendChild(ligne);
-      totalBrut += produit.prix * produit.quantite;
+      const contratGrid = document.getElementById("contrat-grid");
+      contrats.forEach(({ nom, remise, image, observation }) => {
+        const div = document.createElement("div");
+        div.className = "contrat-btn";
+        div.title = observation || "";
+        div.innerHTML = `
+          <div>
+            ${image ? `<img src="${image}" class="img-produit" alt="${nom}">` : `<strong>${nom}</strong>`}
+            <div>- ${remise * 100}%</div>
+          </div>
+        `;
+        div.onclick = () => alert(observation || "Aucune observation");
+        contratGrid.appendChild(div);
+      });
+    })
+    .catch(err => {
+      console.error("Erreur lors de l'appel API :", err);
+      document.body.innerHTML += `<p style="color:red;">Erreur lors de l'appel à l'API.</p>`;
     });
-
-    const montantRemise = totalBrut * (remise / 100);
-    const totalFinal = totalBrut - montantRemise;
-
-    totalBrutEl.textContent = totalBrut.toFixed(2) + ' $';
-    remiseEl.textContent = `${remise} % (-${montantRemise.toFixed(2)} $)`;
-    totalEl.textContent = totalFinal.toFixed(2) + ' $';
-  }
-
-  function appliquerRemise(pourcentage) {
-    remise = pourcentage;
-    afficherTicket();
-  }
-
-  function annulerRemise() {
-    remise = 0;
-    afficherTicket();
-  }
-
-  function viderTicket() {
-    ticket.length = 0;
-    remise = 0;
-    afficherTicket();
-  }
-
-  function afficherProduits() {
-    const grid = document.getElementById('produit-grid');
-    produits.forEach(({ nom, prix, image }) => {
-      const div = document.createElement('div');
-      div.className = 'produit-btn';
-      div.innerHTML = `
-        ${image ? `<img src="${image}" class="img-produit" alt="${nom}">` : `<div style="font-weight:bold; margin-bottom:8px;">${nom}</div>`}
-        <div class="quantite-btns">
-          <button class="quantite-btn" onclick="ajouterProduit('${nom}', ${prix}, 1)">+1</button>
-          <button class="quantite-btn" onclick="ajouterProduit('${nom}', ${prix}, 5)">+5</button>
-          <button class="quantite-btn" onclick="ajouterProduit('${nom}', ${prix}, 10)">+10</button>
-        </div>
-      `;
-      grid.appendChild(div);
-    });
-  }
-
-  function afficherContrats() {
-    const contratGrid = document.getElementById('contrat-grid');
-    contrats.forEach(({ nom, remise, image, observation }) => {
-      const btn = document.createElement('div');
-      btn.className = 'produit-btn contrat-btn';
-      btn.style.cursor = 'pointer';
-      btn.onclick = () => {
-        appliquerRemise(Number(remise * 100));
-        if (observation) alert(observation);
-      };
-      btn.innerHTML = `
-        <div class="img-wrapper">
-          ${image ? `<img src="${image}" class="img-produit" alt="${nom}">` : `${nom}`}
-        </div>
-        <div>-${remise * 100}%</div>
-      `;
-      contratGrid.appendChild(btn);
-    });
-  }
-
-  window.onload = () => {
-    fetch(https://script.google.com/macros/s/AKfycbwfJZx3pCUVE8fVuBqUqg1i0xlVRdATGD9lFA7P8JwvePUvX8I3IuhZdJGQcpcLgaKo/exec)
-      .then(response => response.json())
-      .then(data => {
-        produits = data.produits;
-        contrats = data.contrats;
-        afficherProduits();
-        afficherContrats();
-      })
-      .catch(err => console.error("Erreur lors du chargement des données :", err));
-  };
 </script>
 
 </body>
