--- a/index.html
+++ b/index.html
@@ -1,5 +1,28 @@
 <!DOCTYPE html>
 <html lang="fr">
+  <link id="dynamic-favicon" rel="icon" type="image/png" href="favicon.png">
+<script>
+  // Charger le titre et le favicon depuis l'API
+  fetch("https://script.google.com/macros/s/AKfycbzLhT6sLOk9iufAKTRC60GfK4uQ4YzcZTYoDQnxp_HUMs6AAjyXClGjuGg05-X9mFVu/exec")
+    .then(res => res.json())
+    .then(data => {
+      const siteInfo = data.site?.[0]; // On suppose qu’il n’y a qu’une ligne dans "Site"
+      if (siteInfo) {
+        // Met à jour le titre de la page
+        document.title = siteInfo.texte || "Rex Diner - Caisse";
+
+        // Met à jour le favicon
+        const favicon = document.getElementById("dynamic-favicon");
+        if (favicon && siteInfo.logo) {
+          favicon.href = siteInfo.logo;
+        }
+      }
+    })
+    .catch(err => {
+      console.error("Erreur lors du chargement des infos du site :", err);
+    });
+</script>
+
 <head>
   <meta charset="UTF-8" />
   <title>Rex Diner - Caisse</title>
