--- a/index.html
+++ b/index.html
@@ -1,40 +1,37 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <link id="dynamic-favicon" rel="icon" type="image/png" href="favicon.png">
-<script>
-  // Charger le titre et le favicon depuis l'API
-  fetch("https://script.google.com/macros/s/AKfycbxS2HMOo38R7Ju9gf86ZJi2UIEj9lQ4AtvkvXPIlskGMFIVZe5pszjDRBVJp3nmZWcG/exec")
-    .then(res => res.json())
-    .then(data => {
-      const siteInfo = data.site?.[0]; // On suppose qu’il n’y a qu’une ligne dans "Site"
-      if (siteInfo) {
-        // Met à jour le titre de la page
-        document.title = siteInfo.texte || "Rex Diner - Caisse";
-
-        // Met à jour le favicon
-        const favicon = document.getElementById("dynamic-favicon");
-        if (favicon && siteInfo.logo) {
-          favicon.href = siteInfo.logo;
-        }
-      }
-    })
-    .catch(err => {
-      console.error("Erreur lors du chargement des infos du site :", err);
-    });
-</script>
-
 <head>
   <meta charset="UTF-8" />
   <title>Rex Diner - Caisse</title>
+  <link id="dynamic-favicon" rel="icon" type="image/png" href="favicon.png">
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 20px; background-color: #f5f5f5; }
-    .container { display: flex; gap: 20px; max-width: 1600px; margin: auto; background: white; border-radius: 12px; padding: 20px; }
-    .produits, .ticket { flex: 1; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+      background-color: #f5f5f5;
+    }
+
+    .container {
+      display: flex;
+      gap: 20px;
+      max-width: 1600px;
+      margin: auto;
+      background: white;
+      border-radius: 12px;
+      padding: 20px;
+    }
+
+    .produits, .ticket {
+      flex: 1;
+    }
+
     .produit-grid, .contrat-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
       gap: 12px;
     }
+
     .produit-btn, .contrat-btn {
       background-color: #e0f2f1;
       padding: 10px;
@@ -42,7 +39,11 @@
       text-align: center;
       cursor: pointer;
     }
-    .produit-btn:hover, .contrat-btn:hover { background-color: #b2dfdb; }
+
+    .produit-btn:hover, .contrat-btn:hover {
+      background-color: #b2dfdb;
+    }
+
     .img-produit {
       width: 100px;
       height: 100px;
@@ -50,13 +51,47 @@
       border-radius: 6px;
       margin-bottom: 8px;
     }
-    .quantite-btns { display: flex; justify-content: center; gap: 6px; flex-wrap: wrap; }
-    .quantite-btn { font-size: 12px; padding: 4px 8px; border: none; background-color: #c8e6c9; border-radius: 4px; cursor: pointer; }
-    .quantite-btn:hover { background-color: #a5d6a7; }
-    .ticket-content { background: #f0f0f0; padding: 10px; border-radius: 10px; min-height: 150px; margin-bottom: 10px; }
-    .ticket-line { display: flex; justify-content: space-between; margin: 5px 0; }
-    .total { font-weight: bold; font-size: 18px; margin-top: 10px; }
-    .remise-btns button { margin: 2px; }
+
+    .quantite-btns {
+      display: flex;
+      justify-content: center;
+      gap: 6px;
+      flex-wrap: wrap;
+    }
+
+    .quantite-btn {
+      font-size: 12px;
+      padding: 4px 8px;
+      border: none;
+      background-color: #c8e6c9;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    .quantite-btn:hover {
+      background-color: #a5d6a7;
+    }
+
+    .ticket-content {
+      background: #f0f0f0;
+      padding: 10px;
+      border-radius: 10px;
+      min-height: 150px;
+      margin-bottom: 10px;
+    }
+
+    .ticket-line {
+      display: flex;
+      justify-content: space-between;
+      margin: 5px 0;
+    }
+
+    .total {
+      font-weight: bold;
+      font-size: 18px;
+      margin-top: 10px;
+    }
+
     .remise-btns {
       display: flex;
       justify-content: center;
@@ -75,7 +110,7 @@
     }
 
     .remise-btns button:not(:last-child) {
-      background-color: #4caf50; /* Vert pour remises */
+      background-color: #4caf50;
     }
 
     .remise-btns button:not(:last-child):hover {
@@ -83,15 +118,13 @@
     }
 
     .remise-btns button:last-child {
-      background-color: #f44336; /* Rouge pour Annuler */
+      background-color: #f44336;
     }
 
     .remise-btns button:last-child:hover {
       background-color: #d32f2f;
     }
   </style>
-    
-
 </head>
 <body>
 
@@ -171,12 +204,21 @@
     afficherTicket();
   }
 
-  // Appel à l'API Google Apps Script
+  // Appel à l’API Google Apps Script
   fetch("https://script.google.com/macros/s/AKfycbzLhT6sLOk9iufAKTRC60GfK4uQ4YzcZTYoDQnxp_HUMs6AAjyXClGjuGg05-X9mFVu/exec")
     .then(res => res.json())
     .then(data => {
       const produits = data.produits || [];
       const contrats = data.contrats || [];
+      const siteInfo = data.site?.[0];
+
+      if (siteInfo) {
+        document.title = siteInfo.texte || document.title;
+        const favicon = document.getElementById("dynamic-favicon");
+        if (favicon && siteInfo.logo) {
+          favicon.href = siteInfo.logo;
+        }
+      }
 
       const produitGrid = document.getElementById("produit-grid");
       produits.forEach(({ nom, prix, image }) => {
