--- a/index.html
+++ b/index.html
@@ -101,7 +101,6 @@
       margin-top: 8px;
     }
 
-
     .remise-btns {
       display: flex;
       justify-content: center;
@@ -133,6 +132,18 @@
 
     .remise-btns button:last-child:hover {
       background-color: #d32f2f;
+    }
+
+    /* Titres stylisés */
+    .produits h2,
+    .ticket h2,
+    .ticket h3 {
+      text-align: center;
+      text-transform: uppercase;
+      border-bottom: 2px solid #ccc;
+      padding-bottom: 6px;
+      margin-bottom: 16px;
+      letter-spacing: 1px;
     }
 
     /* Modal popup personnalisé */
@@ -176,12 +187,12 @@
 
 <div class="container">
   <div class="produits">
-    <h2>Produits</h2>
+    <h2>🛒 Produits</h2>
     <div id="produit-grid" class="produit-grid"></div>
   </div>
 
   <div class="ticket">
-    <h2>Ticket</h2>
+    <h2>🧾 Ticket</h2>
     <div id="ticket-content" class="ticket-content"></div>
     <div class="total"><span>Total brut :</span> <span id="total-brut">0,00 $</span></div>
     <div class="total"><span>Remise :</span> <span id="remise-appliquee">0 % (-0,00 $)</span></div>
@@ -190,8 +201,7 @@
       <span id="total-final">0,00 $</span>
     </div>
 
-
-    <h3>Réductions rapides</h3>
+    <h3>🔻 Réductions rapides</h3>
     <div class="remise-btns">
       <button onclick="appliquerRemise(5)">-5%</button>
       <button onclick="appliquerRemise(10)">-10%</button>
@@ -200,7 +210,7 @@
       <button onclick="annulerRemise()">Annuler</button>
     </div>
 
-    <h3>Contrats</h3>
+    <h3>💼 Contrats</h3>
     <div id="contrat-grid" class="contrat-grid"></div>
   </div>
 </div>
