--- a/index.html
+++ b/index.html
@@ -134,7 +134,6 @@
       background-color: #d32f2f;
     }
 
-    /* Titres stylisés */
     .produits h2,
     .ticket h2,
     .ticket h3 {
@@ -146,7 +145,6 @@
       letter-spacing: 1px;
     }
 
-    /* Modal popup personnalisé */
     #popup-observation {
       display: none;
       position: fixed;
@@ -199,6 +197,13 @@
     <div class="total" style="text-align:center;">
       <span>Total final :</span>
       <span id="total-final">0,00 $</span>
+    </div>
+
+    <!-- Bouton Effacer le ticket -->
+    <div style="text-align: center; margin-top: 10px;">
+      <button onclick="effacerTicket()" style="padding: 8px 14px; background-color: #777; color: white; border: none; border-radius: 6px; font-weight: bold; cursor: pointer;">
+        🗑️ Effacer le ticket
+      </button>
     </div>
 
     <h3>🔻 Réductions rapides</h3>
@@ -268,6 +273,12 @@
   }
 
   function annulerRemise() {
+    remise = 0;
+    afficherTicket();
+  }
+
+  function effacerTicket() {
+    ticket = [];
     remise = 0;
     afficherTicket();
   }
