--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <body>
   <div class="container">
     <div class="card" onclick="window.location.href='caisse.html'">
-      <img src="https://cdn-icons-png.flaticon.com/512/263/263115.png" alt="Caisse" />
+      <img src="https://i.ibb.co/rKT93TPc/pack-kooron-cx901-23711611.jpg" alt="Caisse" />
       <span>Accéder à la caisse</span>
     </div>
     <div class="card" onclick="window.location.href='resume.html'">
