--- a/caisse.html
+++ b/caisse.html
@@ -182,6 +182,12 @@
   </style>
 </head>
 <body>
+    <div style="margin-bottom: 20px;">
+  <button onclick="window.location.href='index.html'" style="padding: 10px 16px; background-color: #555; color: white; border: none; border-radius: 6px; font-weight: bold; cursor: pointer;">
+    ⬅️ Retour à l'accueil
+  </button>
+</div>
+
 
 <div class="container">
   <div class="produits">
