--- a/resume.html
+++ b/resume.html
@@ -12,17 +12,17 @@
     }
 
     .retour-btn {
-      position: absolute;
-      top: 20px;
-      left: 20px;
-      padding: 10px 16px;
-      background-color: #555;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      font-weight: bold;
-      cursor: pointer;
+  display: inline-block;
+  margin-bottom: 30px;
+  padding: 10px 16px;
+  background-color: #555;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  font-weight: bold;
+  cursor: pointer;
     }
+
 
     h1 {
       text-align: center;
@@ -57,10 +57,12 @@
   </style>
 </head>
 <body>
+  <div style="text-align:left;">
+    <button class="retour-btn" onclick="window.location.href='index.html'">⬅️ Retour à l'accueil</button>
+  </div>
 
-<button class="retour-btn" onclick="window.location.href='index.html'">⬅️ Retour à l'accueil</button>
+  <h1>RÉSUMÉ D'ACTIVITÉ</h1>
 
-<h1>Résumé d'activité</h1>
 
 <table>
   <thead>
