--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <span>Accéder à la caisse</span>
     </div>
     <div class="card" onclick="window.location.href='resume.html'">
-      <img src="https://cdn-icons-png.flaticon.com/512/1828/1828919.png" alt="Résumé" />
+      <img src="https://i.ibb.co/Z6tx3GtL/statistiques.jpg" alt="Résumé" />
       <span>Résumé d'activité</span>
     </div>
   </div>
