--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 <body>
   <div class="container">
     <div class="card" onclick="window.location.href='caisse.html'">
-      <img src="images/caisse.png" alt="Caisse">
+      <img src="https://i.ibb.co/rKT93TPc/pack-kooron-cx901-23711611.jpg" alt="Caisse">
       <h2>Accéder à la caisse</h2>
     </div>
     <div class="card" onclick="window.location.href='resume.html'">
-      <img src="images/stat.png" alt="Statistiques">
+      <img src="https://i.ibb.co/Z6tx3GtL/statistiques.jpg" alt="Statistiques">
       <h2>Voir les statistiques</h2>
     </div>
   </div>
