--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       margin: 0;
       padding: 0;
       font-family: Arial, sans-serif;
-      background-image: url('https://i.ibb.co/7xPxjKtC/garret-removebg-preview.png'); /* Remplace par ton image */
+      background-image: url('https://i.ibb.co/pvgVjRyX/logo-rex-diner.png"'); /* Remplace par ton image */
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
