--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Accueil - Rex Diner</title>
+  <link rel="icon" type="image/png" href="https://i.ibb.co/pvgVjRyX/logo-rex-diner.png">
+
   <style>
     body {
       margin: 0;
