--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
       background-repeat: no-repeat;
       height: 100vh;
     }
+      .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: white; /* ou autre selon ton effet souhaité */
+        opacity: 0.5;
+        z-index: 0;
+    }
 
     .container {
       display: flex;
@@ -57,6 +67,8 @@
   </style>
 </head>
 <body>
+  <div class="overlay"></div>
+
   <div class="container">
     <div class="card" onclick="window.location.href='caisse.html'">
       <img src="https://i.ibb.co/rKT93TPc/pack-kooron-cx901-23711611.jpg" alt="Caisse">
