--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
-      opacity: 0.1; /* transparence de l’image de fond */
+      opacity: 0.1;
       z-index: 0;
     }
 
@@ -38,7 +38,7 @@
       gap: 40px;
       flex-wrap: wrap;
       position: relative;
-      z-index: 1; /* contenu au-dessus du fond */
+      z-index: 1;
     }
 
     .card {
@@ -80,6 +80,10 @@
     <div class="card" onclick="window.location.href='resume.html'">
       <img src="https://i.ibb.co/Z6tx3GtL/statistiques.jpg" alt="Statistiques">
       <h2>Voir les statistiques</h2>
+    </div>
+    <div class="card" onclick="window.location.href='standard.html'">
+      <img src="https://i.ibb.co/fzGLj7Jh/standard.jpg" alt="Standard">
+      <h2>Voir le standard</h2>
     </div>
   </div>
 </body>
