--- a/standard.html
+++ b/standard.html
@@ -51,10 +51,10 @@
   <table id="standardTable">
     <thead>
       <tr>
-        <th>Nom</th>
-        <th>Poste</th>
-        <th>Disponible</th>
-        <th>Remarques</th>
+        <th>Date</th>
+        <th>Numéro</th>
+        <th>Répondu</th>
+        <th>Durée(en sec)</th>
       </tr>
     </thead>
     <tbody>
